[gd_scene load_steps=3 format=3 uid="uid://bbtpleikk7lrg"]

[ext_resource type="Script" path="res://Scripts/area_detection.gd" id="1_fc6o8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gojdd"]

[node name="area_detection" type="Area2D"]
script = ExtResource("1_fc6o8")
circle_radius = 5.0

[node name="area_det" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gojdd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
